deploy/k8s/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: altinity-sql-browser
spec:
  rules:
    - host: sql-browser.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: altinity-sql-browser
                port:
                  number: 8900
